add cli files